[metadata]
name = simple-encoders
version = 0.1.0
author = Fabian Margreiter
author_email = fabian.margreiter@gmail.com
description = A simple package for encoding and decoding categoric data for ML models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EmmArrGee/simple-encoders
project_urls =
    Bug Tracker = https://github.com/EmmArrGee/simple-encoders/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = simple_encoders
packages = find:
python_requires = >=3.6

[options.packages.find]
where = simple_encoders